# pwsh-analyzer

./: pyproject.toml
src/: helper.py  main.py  words.py
